Bug 1221341. Snap box shadow clip rect to device pixels. r=mstange